# opencv_practice

capture_camera/: README.md
capture_camera/desktop/: CMakeLists.txt  build_and_run.sh  main.cc  opencv_practice
cartoonifier/desktop/: CMakeLists.txt  build_and_run.sh  cartoon.cpp  cartoon.h  main.cc  opencv_practice
